# CodeIR

./: .gitignore  AGENTS.md  LICENSE  README.md  cli.py  mirofish_smoke_p1_codex_5.2_withCodeIR.json  mirofish_smoke_p1_codex_5.2_withCodeIR.txt  mirofish_suite3_codeir_codex_5.2.json  mirofish_suite3_codeir_codex_5.2.txt  mirofish_suite3_codeir_codex_5.2_agents.json  mirofish_suite3_codeir_codex_5.2_agents.txt  mirofish_suite3_codeir_codex_5.3Codex.json  mirofish_suite3_codeir_codex_5.3Codex.txt  mirofish_suite3_codeir_codex_5.3Codex_agents.json  mirofish_suite3_codeir_codex_5.3Codex_agents.txt  mirofish_suite3_codeir_codex_5.4_agents.json  mirofish_suite3_codeir_codex_5.4_agents.txt  mirofish_suite3_codeir_codex_5.4_recheck.json  mirofish_suite3_codeir_codex_5.4_recheck.txt  mirofish_suite3_smoke_p1_codeir_codex_5.4_recheck.json  mirofish_suite3_smoke_p1_codeir_codex_5.4_recheck.txt  mirofish_suite3_smoke_p1_codex_5.4_recheck.json  mirofish_suite3_smoke_p1_codex_5.4_recheck.txt  pyproject.toml  pytest.ini  sophistication2_codex_5.2_withCodeIR.json  sophistication2_codex_5.2_withCodeIR.txt
.agents/skills/codeir/: SKILL.md
.github/workflows/: ci.yml
codeir.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: TreeWithTokens.rtf
docs/: Future_Considerations.md  IR_contract_v0_2.json  IR_grammar_v0_2.md  IR_spec.md  IR_spec_as_built_v0_2.md  IR_target_architecture.md  Rationale.md  bearings.md  compression_examples_flask.md  integration_examples.md  llm_test_manual.md  temporal_design.md  test_manual.md
index/: __init__.py  bug_benchmark.py  callers.py  eval.py  floor_test.py  indexer.py  language_base.py  languages.py  locator.py  mapping.py  pattern_detector.py  prompt_benchmark.py  python_language.py  rust_language.py  search.py  typescript_language.py
index/db/: db.py  fetch.py  schema.json  stats.py
index/lang/: __init__.py  python_backend.py  rust_backend.py
index/languages/: __init__.py  base.py  python.py  typescript.py
index/store/: __init__.py  db.py  fetch.py  schema.json  stats.py
ir/: __init__.py  abbreviations.py  benchmark.py  classifier.py  compressor.py  init.py  rules_generator.py  stable_ids.py  token_count.py
lang/: __init__.py  base.py  python.py  rust.py
languages/: __init__.py  python_lang.py  rust_lang.py
scripts/: generate_aider_maps.py  generate_entity_mapping.py  measure_compression.py  migrate_entity_ids.py  run_compression_eval.sh
tests/: test_api_schemas.py  test_compression_sampling.py  test_embedding_retriever_backends.py  test_eval_modes_integration.py  test_fastapi_cli_integration.py  test_incremental_id_regression.py  test_incremental_indexing.py  test_ir_contract_sync.py  test_l1_exception_signals.py  test_label_generation.py  test_legacy_mode_mapping.py  test_orientation_family_expansion.py  test_prompt_scoring.py  test_stratified_sampler.py  test_task_metrics.py  test_task_pack_governance.py
tests/docs/: llm_test_manual.md  test_manual.md
tests/eval/: BEARINGS_AB_README.md  README_task_benchmark.md  SEARCH_CALLERS_AB_README.md  TOOL_EVAL_README.md  bearings_ab_claude_suite.json  bearings_ab_claude_suite_v2.json  bug_benchmark.py  entity_family.py  eval.py  example_response.json  floor_test.py  labelgen.py  prompt_benchmark.py  prompt_scoring.py  providers.py  ranking.py  run_comparison_tests.py  run_floor_tests.py  run_orientation_tests.py  score_bearings_ab.py  score_search_callers_ab.py  score_tool_tasks.py  task_pack_bearings_ab_v1.json  task_pack_bearings_ab_v2.json  task_pack_search_callers_ab_v1.json  task_pack_tools_v1.json
tests/eval/corpus/: fastapi_users_raw_retrieval_corpus.json  raw_retrieval_corpus.json  requests_corpus.json  requests_ir_samples.json
tests/fixtures/rust_sample/: AGENTS.md  Cargo.toml
tests/fixtures/rust_sample/.agents/skills/codeir/: SKILL.md
tests/fixtures/rust_sample/src/: config.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  store.rs
tests/fixtures/rust_sample/src/db/: connection.rs  mod.rs
tests/fixtures/rust_sample/src/handlers/: auth.rs  user.rs
tests/fixtures/rust_sample/tests/: integration_test.rs
tests/integration/: README.md  tool_integration_test.py
tests/unit/: conftest.py  test_abbreviations.py  test_annotations_cli.py  test_bearings_ab_eval.py  test_bearings_paths.py  test_bearings_rendering.py  test_benchmark_runner_codex.py  test_callers.py  test_classifier.py  test_classifier_ast.py  test_cli_parser.py  test_compressor.py  test_domain_classifier.py  test_expand_cli.py  test_grep_cli.py  test_impact_cli.py  test_indexer_core.py  test_init_platforms.py  test_languages.py  test_locator.py  test_locator_core.py  test_mapping.py  test_missing_index_cli.py  test_mixed_indexing.py  test_packaging.py  test_pattern_detector.py  test_plain_rendering.py  test_python_frontend.py  test_rust_backend.py  test_rust_integration.py  test_rust_language.py  test_rust_support.py  test_search.py  test_search_callers_ab_eval.py  test_search_cli.py  test_show_cli.py  test_stable_ids.py  test_stats_cli.py  test_store_db.py  test_trace_cli.py  (+3 more)
tools/: __init__.py  api_schemas.py  codeir_tools.json  examples.json  runtime.py
(+61 files in other folders)
