[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeir_tools"
version = "0.2.0"
description = "Deterministic code compression and indexing for Python repositories"
readme = "docs/Rationale.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["code-analysis", "ir", "indexing", "compression", "llm", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]

[project.optional-dependencies]
rust = [
    "tree-sitter",
    "tree-sitter-rust",
]
typescript = [
    "tree-sitter",
    "tree-sitter-typescript",
]
eval = [
    "anthropic",
    "openai",
    "google-generativeai",
    "numpy",
    "sentence-transformers",
    "scikit-learn",
]
test = [
    "pytest",
    "ruff",
    "tree-sitter",
    "tree-sitter-rust",
    "tree-sitter-typescript",
]

[project.scripts]
codeir = "cli:main"

[tool.setuptools]
packages = ["ir", "index", "index.db", "tools"]
py-modules = ["cli"]

[tool.setuptools.package-data]
"index.db" = ["schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# Defaults (E4/E7/E9/F) plus import sorting. Expand deliberately, not by default.
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Tests insert the repo root on sys.path before importing cli/ir/index.
"tests/**" = ["E402"]
